--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Dependencies
 markdown:         redcarpet
-highlighter:      pygments
+pygments:         true
 
 # Permalinks
 permalink:        pretty
@@ -9,12 +9,17 @@ permalink:        pretty
 title:            Deversity
 tagline:          Development Services
 url:              http://www.deversity.uk
+description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
 baseurl:          /
+
 author:
   name:           Oliver Pearmain
   url:            http://www.oliverpearmain.com
 
+paginate:         5
+
 # Custom vars
-version:          1.0.0
+version:          2.1.0
+
 github:
   repo:           https://github.com/Deversity/deversity.github.io
