--- a/_config.yml
+++ b/_config.yml
@@ -23,3 +23,13 @@ version:          2.1.0
 
 github:
   repo:           https://github.com/Deversity/deversity.github.io
+
+
+
+
+
+# This below is required in order to support redirects (see the following URLs for details):
+#   https://help.github.com/articles/redirects-on-github-pages/
+#   https://help.github.com/articles/using-jekyll-plugins-with-github-pages/
+gems:
+  - jekyll-redirect-from
